# dcms-rust-server

./: .gitignore  Cargo.toml  Makefile  README.md
doc/: 23rdJan.md  EU-README.md  README.md  endpoint-list.md  impr.md  jan13thREADME.md  openapi.json
migrations/: 001_core.sql  002_people.sql  003_session_token.sql  004_position.sql  005_phone_number_sms.sql  006_service_catalog.sql  007_patient_register_number.sql  008_session_impersonation.sql  009_clinic_settings_v2.sql  010_appointments.sql  011_tasks.sql  012_waitlist.sql  013_patient_notes.sql  014_appointment_source.sql  015_tasks.sql
scripts/: git_push_all.sh  migrate.sh  reset_dev.sh  seed_demo_data.sql  seed_dev.sh  seed_dev.sql  test_all.sh  test_appointments_full.sh  test_appointments_phase1.sh  test_auth_new_endpoints_full.sh  test_auth_roles.sh  test_patient_permissions.sh  test_patients_full.sh  test_phone_numbers_full.sh  test_sessions_list.sh  test_sessions_revoke_all.sh  test_sessions_revoke_one.sh  test_sms_history.sh  test_tasks_phase1.sh  test_users_admin_controls.sh
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs
src/middleware/: auth_context.rs  mod.rs
src/routes/: appointment_routes.rs  auth_routes.rs  clinic_routes.rs  home_routes.rs  mod.rs  patient_comm_routes.rs  patient_routes.rs  service_routes.rs  task_routes.rs  user_routes.rs
tests/: user_management.rs
