[package]
name = "DCMS-Rust-Server"
version = "0.1.0"
edition = "2024"

[dependencies]

axum-extra = { version = "0.12", features = ["typed-header"] }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
headers = "0.4"
dotenvy = "0.15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8.8"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
tower-http = { version = "0.5", features = ["trace"] }
anyhow = "1.0.100"
hex = "0.4.3"
async-trait = "0.1"
